# BA-Modding-Toolkit

./: .gitignore  BA_Modding_Toolkit.spec  README.md  README_zh-CN.md  main.pyw  maincli.py  processing.py  pyproject.toml  requirements.txt  ui.py  utils.py
.github/workflows/: pytest.yml
src/ba_modding_toolkit/: core.py  i18n.py  utils.py
src/ba_modding_toolkit/cli/: handlers.py  taps.py
src/ba_modding_toolkit/gui/: app.py  base_tab.py  components.py  dialogs.py  utils.py
src/ba_modding_toolkit/gui/tabs/: asset_extractor_tab.py  asset_packer_tab.py  crc_tool_tab.py  jp_conversion_tab.py  mod_update_tab.py
src/ba_modding_toolkit/locales/: en-US.json  zh-CN.json
tests/: README.md  conftest.py  test_crc.py  test_utils.py
tests/test_core/: test_extractor.py  test_io.py  test_packer.py  test_update.py
ui/: __init__.py  app.py  base_tab.py  components.py  dialogs.py  utils.py
ui/tabs/: __init__.py  asset_extractor_tab.py  asset_packer_tab.py  crc_tool_tab.py  jp_gb_conversion_tab.py  mod_update_tab.py
